# prune

./: .gitignore  CHANGELOG.md  Cargo.toml  deny.toml  readme.md  readme_zh-hans.md  release-plz.toml  tokei_check.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  release-plz.yml  update-deps.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/i18n/: en.ftl  zh-Hans.ftl
android/src/main/java/com/bliaik/prune/: FluentMessages.java  MainActivity.java  ModListOrganizer.java  ProjectBundleInstaller.java  ProjectConfigFile.java  PruneApiClient.java  SharedSoupRuneWorkspace.java
android/src/main/res/values/: strings.xml  styles.xml
android/src/test/java/com/bliaik/prune/: AndroidManifestTest.java  FluentMessagesTest.java  MainActivitySourceTest.java  ModListOrganizerTest.java  ProjectBundleInstallerTest.java  ProjectConfigFileTest.java  PruneApiClientTest.java  SharedSoupRuneWorkspaceSourceTest.java  SharedSoupRuneWorkspaceTest.java
src/: android.rs  cli.rs  gui.rs  lib.rs  main.rs  mods.rs  process.rs  server.rs  workspace.rs
src/server/: build.rs  bundle.rs  tests.rs
tests/: android_build_script.rs  android_plan.rs  mods.rs  server_bundle.rs  workspace_paths.rs
