[package]
name = "prune"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/prune"
description = "SoupRune mod manager and build assistant"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

[features]
default = []
gui = ["dep:dioxus"]

[dependencies.dioxus]
version = "0.7.7"
optional = true
default-features = false
features = ["desktop", "minimal"]

[dev-dependencies]
tempfile = "3"
